--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.1.2",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
+    "@tailwindcss/vite": "^4.1.12",
     "tailwindcss": "^3.3.6"
   }
 }
