--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@apollo/client": "^3.13.9",
     "graphql": "^16.11.0",
+    "js-cookie": "^3.0.5",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router": "^7.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
