--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apollo/client": "^3.13.9",
     "@tailwindcss/vite": "^4.1.12",
+    "date-fns": "^4.1.0",
     "graphql": "^16.11.0",
     "js-cookie": "^3.0.5",
     "react": "^19.1.1",
