--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@apollo/client": "^3.13.9",
     "@tailwindcss/vite": "^4.1.12",
+    "apollo-upload-client": "17",
     "date-fns": "^4.1.0",
     "graphql": "^16.11.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.540.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.8.1",
