--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "graphql": "^16.11.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.540.0",
+    "notistack": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.8.1",
