--- a/package.json
+++ b/package.json
@@ -36,5 +36,6 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.1.2"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
